# Legal-AI

./: .gitignore  AUTHENTICATION.md  Legal-AI-Architecture.drawio.xml  PHASE_3_TESTING_GUIDE.md  QUICK_START.md  RBAC_IMPLEMENTATION.md  README.md  agent.py  app.py  auth.py  config.yaml  db.py  email_service.py  embed.py  gateway.py  pyproject.toml  pytest.ini  rbac.py  requirements.txt  run_migration.py  streamlit_app.py  test_auth_flow.py  utils.py
.agents/skills/developing-with-streamlit/scripts/: discover.py
.github/workflows/: deploy.yml
.venv_py311/: pyvenv.cfg
legal_ai/: __init__.py
legal_ai/agent/: __init__.py  agent.py
legal_ai/auth/: __init__.py  auth.py  browser_storage.py  jwt_utils.py  rbac.py
legal_ai/auth/_browser_auth_component/: index.html
legal_ai/core/: __init__.py  config.py  constants.py  logging.py  settings.py  tracing.py  utils.py
legal_ai/data/: jurisdictions_seed.json
legal_ai/db/: __init__.py  _engine.py  db.py  documents.py  jurisdictions.py  schema.py  seed_jurisdictions.py  sessions.py  tokens.py  users.py
legal_ai/migrations/: 002_add_documents_tracking_table.sql  003_jurisdictions_hierarchy.sql  004_refactor_documents.sql  005_seed_world_jurisdiction.sql  006_fix_documents_uploaded_by.sql  __init__.py
legal_ai/pages/: __init__.py  admin.py  compare.py  profile.py
legal_ai/scripts/: __init__.py  migrate_eu_ai_act.py  seed_jurisdictions.py
legal_ai/services/: __init__.py  chat_service.py  document_service.py  email_service.py  embed.py  gateway.py  jurisdiction_retriever.py  magic_link_api.py  vector_store.py
migrations/: 001_add_user_profile_and_rbac.sql
pages/: admin.py  compare.py  profile.py
scripts/: ingest.py  run_migrations.py
tests/: conftest.py  test_app_ui.py  test_auth_cookie.py  test_auth_flow.py  test_compare_page.py  test_document_upload.py  test_langfuse_tracing.py  test_sendgrid.py
